src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Relationships__c</fullName>
        <label>Account Relationships</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SDHC_Community_Relationships</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Roles__c</fullName>
        <label>Account Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Account_Roles</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aggregate_Bonding__c</fullName>
        <label>Aggregate Bonding</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Suite_Number__c</fullName>
        <label>Billing Suite Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_License_Expiration__c</fullName>
        <label>Business License Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_License_Name__c</fullName>
        <label>Business License Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_License_Number__c</fullName>
        <label>Business License Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Start_Date__c</fullName>
        <label>Business Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSLB_or_Professional_License_Number__c</fullName>
        <label>CSLB or Professional License Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Date__c</fullName>
        <label>Certification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certification_Expiration_Date__c</fullName>
        <formula>Date(Year(Certification_Date__c )+ 3,Month(Certification_Date__c), Day(Certification_Date__c)) - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Certification Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certification_Number__c</fullName>
        <label>Certification Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Employees__c</fullName>
        <label>Contract Employees</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contractor_License_Code__c</fullName>
        <label>Contractor License Code</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A - General Engineering Contractor</fullName>
                </value>
                <value>
                    <fullName>B - General Building Contractor</fullName>
                </value>
                <value>
                    <fullName>C2 - Insulation and Acoustical Contractor</fullName>
                </value>
                <value>
                    <fullName>C4 - Boiler, Hot Water Heating and Steam Fitting Contractor</fullName>
                </value>
                <value>
                    <fullName>C5 - Framing and Rough Carpentry Contractor</fullName>
                </value>
                <value>
                    <fullName>C6 - Cabinet, Millwork and Finish Carpentry Contractor</fullName>
                </value>
                <value>
                    <fullName>C7 - Low Voltage Systems Contractor</fullName>
                </value>
                <value>
                    <fullName>C8 - Concrete Contractor</fullName>
                </value>
                <value>
                    <fullName>C9 - Drywall Contractor</fullName>
                </value>
                <value>
                    <fullName>C10 - Electrical Contractor</fullName>
                </value>
                <value>
                    <fullName>C11 - Elevator Contractor</fullName>
                </value>
                <value>
                    <fullName>C12 - Earthwork and Paving Contractors</fullName>
                </value>
                <value>
                    <fullName>C13 - Fencing Contractor</fullName>
                </value>
                <value>
                    <fullName>C15 - Flooring and Floor Covering Contractors</fullName>
                </value>
                <value>
                    <fullName>C16 - Fire Protection Contractor</fullName>
                </value>
                <value>
                    <fullName>C17 - Glazing Contractor</fullName>
                </value>
                <value>
                    <fullName>C20 - Warm-Air Heating, Ventilating and Air-Conditioning Contractor</fullName>
                </value>
                <value>
                    <fullName>C21 - Building Moving/Demolition Contractor</fullName>
                </value>
                <value>
                    <fullName>C22 - Asbestos Abatement Contractors License</fullName>
                </value>
                <value>
                    <fullName>C23 - Ornamental Metal Contractor</fullName>
                </value>
                <value>
                    <fullName>C27 - Landscaping Contractor</fullName>
                </value>
                <value>
                    <fullName>C28 - Lock and Security Equipment Contractor</fullName>
                </value>
                <value>
                    <fullName>C29 - Masonry Contractor</fullName>
                </value>
                <value>
                    <fullName>C31 - Construction Zone Traffic Control Contractor</fullName>
                </value>
                <value>
                    <fullName>C32 - Parking and Highway Improvement Contractor</fullName>
                </value>
                <value>
                    <fullName>C33 - Painting and Decorating Contractor</fullName>
                </value>
                <value>
                    <fullName>C34 - Pipeline Contractor</fullName>
                </value>
                <value>
                    <fullName>C35 - Lathing and Plastering Contractor</fullName>
                </value>
                <value>
                    <fullName>C36 - Plumbing Contractor</fullName>
                </value>
                <value>
                    <fullName>C38 - Refrigeration Contractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DBA__c</fullName>
        <label>DBA</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DIR_Expiration__c</fullName>
        <label>DIR Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DIR_Registered__c</fullName>
        <label>DIR Registered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <label>DUNS Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diverse_Business_Certification__c</fullName>
        <label>Diverse Business Certification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ELBE/SLBE</fullName>
                </value>
                <value>
                    <fullName>SB</fullName>
                </value>
                <value>
                    <fullName>DBE</fullName>
                </value>
                <value>
                    <fullName>DVBE</fullName>
                </value>
                <value>
                    <fullName>WBE</fullName>
                </value>
                <value>
                    <fullName>MBE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EPA_Certified__c</fullName>
        <label>EPA Certified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Classification__c</fullName>
        <label>Employee Classification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Management/Professional</fullName>
                </value>
                <value>
                    <fullName>Technician</fullName>
                </value>
                <value>
                    <fullName>Construction/Labor</fullName>
                </value>
                <value>
                    <fullName>Service Workers</fullName>
                </value>
                <value>
                    <fullName>Office/Clerical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Time_Employees__c</fullName>
        <label>Full Time Employees</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Worked_for_SDHC__c</fullName>
        <label>Has Worked for SDHC?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Housing_First_Team_Member_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Housing First Team Member Assigned</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Existing__c</fullName>
        <label>New/Existing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notice_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notice Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Offices_Outside_County__c</fullName>
        <label>Number of Offices Outside County</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_NAICS_Code_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other NAICS Code 1</label>
        <referenceTo>NAICS_Code__c</referenceTo>
        <relationshipLabel>Accounts (Other NAICS Code 1)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_NAICS_Code_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other NAICS Code 2</label>
        <referenceTo>NAICS_Code__c</referenceTo>
        <relationshipLabel>Accounts (Other NAICS Code 2)</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_NAICS_Code_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other NAICS Code 3</label>
        <referenceTo>NAICS_Code__c</referenceTo>
        <relationshipLabel>Accounts (Other NAICS Code 3)</relationshipLabel>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_Time_Employees__c</fullName>
        <label>Part Time Employees</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_NAICS_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary NAICS Code</label>
        <referenceTo>NAICS_Code__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prism_Vendor__c</fullName>
        <label>Prism Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Public_Works_Expiration_Date__c</fullName>
        <label>Public Works Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Public_Works_Number__c</fullName>
        <label>Public Works Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualifying_Criteria__c</fullName>
        <label>Qualifying Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Workforce</fullName>
                </value>
                <value>
                    <fullName>Ownership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recent_Ending_Gross__c</fullName>
        <label>Recent Ending Gross</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Release_Of_Information__c</fullName>
        <label>Release Of Information</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_NAICS_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary NAICS Code</label>
        <referenceTo>NAICS_Code__c</referenceTo>
        <relationshipLabel>Accounts (Secondary NAICS Code)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Category__c</fullName>
        <label>Service Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Pest Control</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Single_Bonding__c</fullName>
        <label>Single Bonding</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TaxID_SSN__c</fullName>
        <label>TaxID/SSN</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Total_Employees__c</fullName>
        <formula>Full_Time_Employees__c + Contract_Employees__c + Part_Time_Employees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Types_of_Jobs_Preferred__c</fullName>
        <label>Types of Jobs Preferred</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Union_Member__c</fullName>
        <label>Union Member</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Union_Name__c</fullName>
        <label>Union Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X60_Day_Notice__c</fullName>
        <formula>Certification_Expiration_Date__c  - 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>60 Day Notice</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Yardi_ID__c</fullName>
        <inlineHelpText>This is the Unique Identifier in Yardi, Most likely the &quot;V&quot; Number</inlineHelpText>
        <label>Yardi ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Housing_Finance_Database_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Relationships__c</field>
            <operation>equals</operation>
            <value>Housing Finance Database</value>
        </filters>
        <label>Housing Finance Database Accounts</label>
    </listViews>
    <listViews>
        <fullName>Housing_First_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Relationships__c</field>
            <operation>equals</operation>
            <value>Housing First</value>
        </filters>
        <label>Housing First Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>Rehab_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Relationships__c</field>
            <operation>equals</operation>
            <value>Rehab</value>
        </filters>
        <label>Rehab Accounts</label>
    </listViews>
    <listViews>
        <fullName>Section_3_Businesses</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Relationships__c</field>
            <operation>equals</operation>
            <value>Section 3</value>
        </filters>
        <label>Section 3 Businesses</label>
    </listViews>
    <recordTypes>
        <fullName>RAD_Community_Account</fullName>
        <active>true</active>
        <label>RAD Community Account</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Prog_Affiliation_Required</fullName>
        <active>true</active>
        <description>Forces the user to select Housing First if they are a user assigned to the Housing First SDHC Profile</description>
        <errorConditionFormula>AND(INCLUDES($User.SDHC_Program_Affiliation__c,&quot;Housing First&quot;), NOT(INCLUDES( Account_Relationships__c , &quot;Housing First&quot;)) )</errorConditionFormula>
        <errorDisplayField>Account_Relationships__c</errorDisplayField>
        <errorMessage>You must supply the value of Housing First</errorMessage>
    </validationRules>
</CustomObject>